# TPPrpoject

./: CMakeLists.txt  Game.cpp  Game.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Queries.cpp  Queries.h  README.md  UnitFactory.cpp  UnitFactory.h  main.cpp
Commands/: AttackUnit.cpp  BuyUnit.cpp  Command.h  Work.cpp
Units/: CheapFighter.h  CheapWorker.h  ExpensiveFighter.h  ExpensiveWorker.h  Fighter.h  Unit.h  Worker.h
